--- a/style.css
+++ b/style.css
@@ -43,10 +43,10 @@ body {
 }
 
 .grid-main div {
-  /* display: grid;
+  display: grid;
   place-items: center;
   width: 100%;
-  height: 100%; */
+  height: 100%; 
   cursor: pointer;
   font-size: 3rem;
   border: 1px solid white;
